// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckAnswers renders CheckAnswers correctly 1`] = `
<React.Fragment>
  <h2
    className="wmrards-fe-question"
  >
    Check your answers
  </h2>
  <h3>
    About your 
     enquiry
  </h3>
  <table
    className="wmrards-table wmrards-m-b-xl wmrards-table--without-header"
  >
    <CheckAnswerRow
      changeValueCallback={[Function]}
      value="test enquiry details"
    />
  </table>
  <table
    className="wmrards-table wmrards-m-b-xl wmrards-table--without-header"
  >
    <h3>
      About you
    </h3>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Name"
      value="Tester Testerson"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Registration number"
      value="12345"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="How would you like to be contacted?"
      value="Email: test@testerson.com 
        Phone: 0900 555 8888"
    />
  </table>
  <h3>
    Now send your enquiry
  </h3>
  <p>
    By submitting this enquiry you are confirming that, to the best of your knowledge, the details you are providing are correct.
  </p>
  <div
    className="wmrards-fe-group null"
  >
    <div
      className="wmrards-fe-checkboxes"
    >
      <FieldError
        text={null}
      />
      <Checkbox
        fieldName="agreeTermsAndConditions"
        label={
          <React.Fragment>
            Agree to the
             
            <a
              href="https://www.wmca.org.uk/policies"
              rel="noreferrer"
              target="_blank"
            >
              terms and conditions
            </a>
          </React.Fragment>
        }
      />
      <Checkbox
        fieldName="agreePrivacyPolicy"
        label={
          <React.Fragment>
            Agree to the
             
            <a
              href="https://www.wmca.org.uk/policies"
              rel="noreferrer"
              target="_blank"
            >
              privacy policy
            </a>
          </React.Fragment>
        }
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`CheckAnswers renders CheckAnswers with an error if present 1`] = `
<React.Fragment>
  <h2
    className="wmrards-fe-question"
  >
    Check your answers
  </h2>
  <h3>
    About your 
     enquiry
  </h3>
  <table
    className="wmrards-table wmrards-m-b-xl wmrards-table--without-header"
  >
    <CheckAnswerRow
      changeValueCallback={[Function]}
      value="test enquiry details"
    />
  </table>
  <table
    className="wmrards-table wmrards-m-b-xl wmrards-table--without-header"
  >
    <h3>
      About you
    </h3>
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Name"
      value="Tester Testerson"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="Registration number"
      value="12345"
    />
    <CheckAnswerRow
      changeValueCallback={[Function]}
      label="How would you like to be contacted?"
      value="Email: test@testerson.com 
        Phone: 0900 555 8888"
    />
  </table>
  <h3>
    Now send your enquiry
  </h3>
  <p>
    By submitting this enquiry you are confirming that, to the best of your knowledge, the details you are providing are correct.
  </p>
  <div
    className="wmrards-fe-group wmrards-fe-group--error"
  >
    <div
      className="wmrards-fe-checkboxes"
    >
      <FieldError
        text="Required"
      />
      <Checkbox
        fieldName="agreeTermsAndConditions"
        label={
          <React.Fragment>
            Agree to the
             
            <a
              href="https://www.wmca.org.uk/policies"
              rel="noreferrer"
              target="_blank"
            >
              terms and conditions
            </a>
          </React.Fragment>
        }
      />
      <Checkbox
        fieldName="agreePrivacyPolicy"
        label={
          <React.Fragment>
            Agree to the
             
            <a
              href="https://www.wmca.org.uk/policies"
              rel="noreferrer"
              target="_blank"
            >
              privacy policy
            </a>
          </React.Fragment>
        }
      />
    </div>
  </div>
</React.Fragment>
`;
